--- a/README.adoc
+++ b/README.adoc
@@ -20,3 +20,7 @@ upper-case or lower-case characters (yielding six output formats).
 Also note that one caveat to `Go`'s recommendations is that acrynyms
 should be left capitalized.  This complicates the mapping process a bit
 when mapping back to `Go` compatible names.
+
+== References
+
+1. https://medium.com/better-programming/string-case-styles-camel-pascal-snake-and-kebab-case-981407998841
