--- a/README.adoc
+++ b/README.adoc
@@ -21,6 +21,11 @@ Also note that one caveat to `Go`'s recommendations is that acrynyms
 should be left capitalized.  This complicates the mapping process a bit
 when mapping back to `Go` compatible names.
 
+== Benchmarks
+
+Iterative loop: 1564 ns/op (prefix and infix acronyms disabled)
+State machine: 
+
 == References
 
 1. https://medium.com/better-programming/string-case-styles-camel-pascal-snake-and-kebab-case-981407998841
